versão final com os bonus

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <body>
         <div class="conteudo-superior">
             <h1>PARROT CARD GAME</h1>
+            <div data-test="timer" class="tempo">0</div>
         </div>
         <ul class="mesa">
         </ul>
